--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,9 +2,9 @@ name: CI-CD for ASP.NET Core 8 API
 
 on:
   push:
-    branches: [ "main" ]      # Trigger on pushes to main
+    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]      # Trigger on PRs to main
+    branches: [ "main" ]
 
 jobs:
   build-and-test:
@@ -26,16 +26,26 @@ jobs:
 
       - name: Run tests
         run: dotnet test --no-build --configuration Release
-docker-build-and-push:
-  ...
-  steps:
-    ...
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v4
-      with:
-        context: .          # Root of your API project
-        file: ./Dockerfile  # Dockerfile in the root
-        push: true
-        tags: |
-          ${{ secrets.DOCKERHUB_USERNAME }}/myapi:latest
-          ${{ secrets.DOCKERHUB_USERNAME }}/myapi:${{ github.sha }}
+
+  docker-build-and-push:
+    runs-on: ubuntu-latest
+    needs: build-and-test    # ensures tests pass before Docker step
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .             # Root of your API project
+          file: ./Dockerfile     # Dockerfile in root
+          push: true
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/myapi:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/myapi:${{ github.sha }}
